--- a/styles/global.css
+++ b/styles/global.css
@@ -7,21 +7,45 @@
 body {
     height: 100vh;
     font-family: 'Rubik', san-serif;
-    background: var(--background);
+    background: white;
     display: grid;
-    grid-template-rows: auto 1fr auto;
+    grid-template-rows: 1fr 3fr .5fr;
 }
 
 header {
-    position: sticky;
     top: 0;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 40px;
     display: flex;
     align-items: center;
-    background-color: var(--header-background);
+    justify-content: center;
+    background-color: cadetblue;
 }
 
 main {
     padding: 20px;
+}
+
+.hiding-places {
+    display: flex;
+    justify-content: center;
+}
+
+img {
+    height: 300px;
+}
+
+button {
+    text-align: center;
+}
+
+.scoreboard {
+    text-align: center;
+}
+
+.ghost {
+    height: 300px;
+    background-image: url('./assets/ghost-emoji.png');
 }
 
 footer {
@@ -31,5 +55,5 @@ footer {
     font-size: .8em;
     display: flex;
     justify-content: flex-end;
-    background-color: var(--footer-background);
+    background-color: cadetblue;
 }
